Finished mockup for student home page

--- a/app/imports/ui/pages/landing-page.html
+++ b/app/imports/ui/pages/landing-page.html
@@ -1,5 +1,5 @@
 <template name="Landing_Page">
-  <div>
+  <div class="ui container">
     <div class="ui one column center aligned grid">
       <div class="column six wide form-holder">
         <h2 class="center aligned header form-head">Sign in</h2>
