--- a/app/imports/ui/pages/student-home-page.html
+++ b/app/imports/ui/pages/student-home-page.html
@@ -1,27 +1,116 @@
 <template name="Student_Home_Page">
-  <div class="ui container">
-    <table class="ui striped table" style="padding-top: 50px;">
-      <tr>
-        <img class="ui medium circular image" src="images/whitemage.jpg">
-      </tr>
-    </table>
-    <table class="ui striped table" style="padding-top: 50px;">
-      <thead>
-      <tr>
-        <th>Quest Name</th>
-        <th>Experience</th>
-        <th>Due Date</th>
-        <th>Description</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr>
-        <td>John Lilki</td>
-        <td>September 14, 2013</td>
-        <td>jhlilk22@yahoo.com</td>
-        <td>No</td>
-      </tr>
-      </tbody>
-    </table>
+  <div class="ui container" style="background-color: white;">
+    <div class="ui three column grid" style="padding-left: 20px; padding-top: 20px; padding-right: 20px;">
+      <div class="four wide column"><h1>Aviana</h1></div>
+      <div class="four wide column"><h1>Jane Doe</h1></div>
+      <div class="right aligned eight wide column"><h1>Current Gold: 3200</h1></div>
+    </div>
+    <div class="ui right aligned grid">
+      <div class="center aligned two column row">
+        <div class="left floated four wide column"><img class="ui small image" style="padding-left: 20px"
+                                                       src="images/whitemage.jpg"></div>
+        <div class="centered column"><img class="ui fluid image" style="padding-top:30px"
+                                          src="images/experience bar.png"></div>
+      </div>
+    </div>
+    <div class="ui container" style="padding: 50px 20px 50px 20px;">
+      <h1>Current Quests</h1>
+      <table class="ui selectable celled olive table">
+        <thead>
+        <tr>
+          <th>Quest Name</th>
+          <th>Max Experience</th>
+          <th>Due Date</th>
+          <th>Description</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <td>E42: Digits Part 1</td>
+          <td>10 EXP</td>
+          <td>March 8, 2017</td>
+          <td>For this experience, you will start designing a simple Meteor application called Digits. This part will
+            have you create a mockup of the home page.
+          </td>
+        </tr>
+        <tr>
+          <td>E42: Digits Part 2</td>
+          <td>10 EXP</td>
+          <td>March 9, 2017</td>
+          <td>For this experience, you will start designing a simple Meteor application called Digits. This part will
+            have you create a mockup of the add contacts and edit contacts page.
+          </td>
+        </tr>
+        <tr>
+          <td>E42: Digits Part 3</td>
+          <td>20 EXP</td>
+          <td>March 11, 2017</td>
+          <td>For this experience, you will start designing a simple Meteor application called Digits. This part will
+            have you connect your pages together.
+          </td>
+        </tr>
+        <tr>
+          <td>E42: Digits Part 4</td>
+          <td>30 EXP</td>
+          <td>March 13, 2017</td>
+          <td>For this experience, you will start designing a simple Meteor application called Digits. This part will
+            have you add functionality to your add contacts page. You will also be modifying it to perform validation on
+            the user inputs.
+          </td>
+        </tr>
+        <tr>
+          <td>E42: Digits Part 5</td>
+          <td>20 EXP</td>
+          <td>March 15, 2017</td>
+          <td>For this experience, you will start designing a simple Meteor application called Digits. This part will
+            have you add functionality to your edit contacts page. You will also be modifying it to perform validation
+            on the user inputs.
+          </td>
+        </tr>
+        <tr>
+          <td>E42: Digits Part 6</td>
+          <td>10 EXP</td>
+          <td>March 15, 2017</td>
+          <td>For this experience, you will start designing a simple Meteor application called Digits. This part will
+            have you clean up the project by remove the tempate files.
+          </td>
+        </tr>
+        </tbody>
+      </table>
+      <h1>Completed Quests</h1>
+      <table class="ui selectable sriped celled green table">
+        <thead>
+        <tr>
+          <th>Quest Name</th>
+          <th>Experience Earned</th>
+          <th>Due Date</th>
+          <th>Description</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <td>E38: Meteor Hello World</td>
+          <td>19 EXP</td>
+          <td>Feburary 25, 2017</td>
+          <td>You will be creating a basic application to explore the worldflow of creating and making a Meteor
+            application.
+          </td>
+        </tr>
+        <tr>
+          <td>E39: Meteor in 50 Minutes</td>
+          <td>30 EXP</td>
+          <td>Feburary 26, 2017</td>
+          <td>More practice for creating a Meteor application.
+          </td>
+        </tr>
+        <tr>
+          <td>E40: Meteor Blade Tutorial</td>
+          <td>20 EXP</td>
+          <td>Feburary 27, 2017</td>
+          <td>You will be creating a basic application called "Blaze" following a tutorial.</td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </template>
